--- a/source/sass/2-layouts/_footer.sass
+++ b/source/sass/2-layouts/_footer.sass
@@ -6,38 +6,83 @@
     background: $footer-color
     margin-top: 20px
 
+    @media screen and ( max-width: 980px )
+        height: 350px
+
+    @media screen and ( max-width: 768px )
+        display: flex
+        height: 450px
+
+.footer-container
+    @media screen and ( max-width: 768px )
+        display: flex
+        align-content: center
+        justify-content: center
+
 .footer-block
     display: flex
     align-items: center
     float: left
     justify-content: center
+    margin: 20px
+
+    @media screen and ( max-width: 980px )
+        padding: 50px
+
+    @media screen and ( max-width: 768px )
+        display: block
+        align-items: center
+        float: center
+        justify-content: center
+        padding: 10px
+
+
+        
 
 .logo-block
     text-align: left
-    margin: 20px
+    @media screen and ( max-width: 768px )
+        text-align: center
+    img
+        @media screen and ( max-width: 860px )
+            width: 170px
+            height: 80px
+    p
+        @media screen and ( max-width: 860px )
+            font-size: 15px
+    
 .footer-list
     text-align: left
-    margin: 20px
+    @media screen and ( max-width: 768px )
+        text-align: center
 
-    li
-        font-size: 18px
-        list-style: none
+    img
+        width: 300px
+        height: 190px
 
-        a
-            text-decoration: none
-            color: white
-            
+        @media screen and ( max-width: 860px )
+            width: 250px
+            height: 140px
 
-        a:hover, a:active
-            color: $accent-color
 
 .footer-social-media
-    margin: 20px
+    @media screen and ( max-width: 768px )
+        padding-left: 0px
 
+    h4
+       @media screen and ( max-width: 860px )
+           font-size: 20px 
+    
     img
         width: 50px
         height: 50px
         margin: 10px
+
+        @media screen and ( max-width: 860px )
+            width: 30px
+            height: 30px
+            margin: 5px
+
 
         
 
