--- a/source/sass/2-layouts/_headers.sass
+++ b/source/sass/2-layouts/_headers.sass
@@ -32,3 +32,10 @@
 .title
     margin-top: 150px
     font-weight: bold
+
+    @media screen and ( max-width: 1117px )
+        margin-left: 20px
+
+    @media screen and ( max-width: 660px )
+        width: 80%
+        
