--- a/source/sass/2-layouts/_ubicacion.sass
+++ b/source/sass/2-layouts/_ubicacion.sass
@@ -6,3 +6,9 @@
 .map
     width: 100%
     height: 400px
+
+@media screen and ( max-width: 660px )
+    iframe
+        width: 100%
+        height: 300px
+        
