agregadas categorias faltantes con sus vistas y redes sociales

--- a/source/sass/2-layouts/_headers.sass
+++ b/source/sass/2-layouts/_headers.sass
@@ -29,6 +29,42 @@
     height: 500px
     color: white
 
+#header-ofertas
+    background: url("../img/ofertas-img.jpg") no-repeat
+    background-size: cover
+    height: 500px
+    color: white
+
+#header-camping
+    background: url("../img/camping-img.jpg") no-repeat
+    background-size: cover
+    height: 500px
+    color: white
+
+#header-accesorios
+    background: url("../img/accesorios-img.jpg") no-repeat
+    background-size: cover
+    height: 500px
+    color: white
+
+#header-ropa-hombre
+    background: url("../img/men-img.jpg") no-repeat
+    background-size: cover
+    height: 500px
+    color: white
+
+#header-ropa-mujer
+    background: url("../img/women-img.jpg") no-repeat
+    background-size: cover
+    height: 500px
+    color: white
+
+#header-ropa-niño
+    background: url("../img/kids-img.jpg") no-repeat
+    background-size: cover
+    height: 500px
+    color: white
+
 .title
     margin-top: 150px
     font-weight: bold
