--- a/source/sass/2-layouts/_nav.sass
+++ b/source/sass/2-layouts/_nav.sass
@@ -2,7 +2,11 @@
     background: $primary-color
     color: $font-white
     text-decoration: none
+    position: fixed
+    z-index: 9
+    width: 100%
 
+    
 .main-nav
     display: flex
     align-items: center
@@ -19,9 +23,6 @@
     
     li:first-child
         margin-right: auto
-    
-    li:first-child a
-        margin-left: 0px
 
     li.nav-toggle
         display: none
